# Haskell-Mandelbrot

./: Haskell-Mandelbrot.cabal  README.md
app/: Main.hs
